--- a/50. Pow(x, n).md
+++ b/50. Pow(x, n).md
@@ -1,2 +1,61 @@
 ### [Pow(x, n)](https://leetcode.com/problems/powx-n/)
 
+Implement [pow(x, n)](http://www.cplusplus.com/reference/valarray/pow/), which calculates `x` raised to the power `n` (i.e., `xn`).
+
+ 
+
+**Example 1:**
+
+```
+Input: x = 2.00000, n = 10
+Output: 1024.00000
+```
+
+**Example 2:**
+
+```
+Input: x = 2.10000, n = 3
+Output: 9.26100
+```
+
+**Example 3:**
+
+```
+Input: x = 2.00000, n = -2
+Output: 0.25000
+Explanation: 2-2 = 1/22 = 1/4 = 0.25
+```
+
+ 
+
+**Constraints:**
+
+- `-100.0 < x < 100.0`
+- `-2^31 <= n <= 2^31-1`
+- `n` is an integer.
+- Either `x` is not zero or `n > 0`.
+- `-10^4 <= x^n <= 10^4`
+
+```C
+long double myPow(double x, int n){
+    double ans=1.;
+    long long nn = n;   
+    
+    if(nn<0)nn = -nn;
+    while(nn>0){
+        if(nn%2==0){
+            x = x*x;
+            nn = nn/2;
+        }
+        else{
+            ans = ans*x;
+            nn = nn-1;
+        }
+    }
+    
+    if(n<0) ans = (double)(1.0)/(double)(ans);
+    return ans;
+    
+}
+```
+
