--- a/029. Divide Two Integers.md
+++ b/029. Divide Two Integers.md
@@ -38,7 +38,7 @@ int divide(int dividend, int divisor) {
     /*
     Input : -2147483648
             -1
-    Actual Output : 2147483648 (out of range 2^31)
+    Actual Output : 2147483648 (out of range 2^31-1)
     Expected : 2147483647 (hahaha)
     */
     if(dividend==INT_MIN && divisor==-1) return INT_MAX;
